Add an end to end test with some real content, taking in account prefilled parameter values #147 *small improvs